--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,11 @@
     line-height: 60px;
     font-size: 18px;
 }
+img.lang{
+    height: 55px;
+    width: 65px;
+    
+}
 
 .sidebar-nav>.sidebar-brand a {
     color: #999999;
